<resources>
    <string name="app_name">FindMyCar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_camera_view">CameraView</string>
    <string name="title_activity_camera_lunch">CameraLunch</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="Activity_add_title">Dodawanie znacznika</string>
    <string name="AddAcivity_add_marker_title">Nazwa dodawananego znacznika</string>
    <string name="AddAcivity_add_marker_text">Opis znacznika</string>
    <string name="AddAcivity_add_marker_coordinates_title">Współrzędne geograficzne zapisywanego znacznika</string>
    <string name="AddAcivity_add_marker">Dodaj znacznik</string>
    <string name="AddAcivity_add_marker_false">Nie dodawaj</string>
    <string name="Activity_edit_title">Edytowanie znacznika</string>
    <string name="AddAcivity_edit_marker_title">Zmień nazwę</string>
    <string name="AddAcivity_edit_marker_coordinates_title">Współrzędne geograficzne zmienanego znacznika</string>
    <string name="AddAcivity_edit_marker_text">Zmień opis</string>
    <string name="AddAcivity_edit_marker">Zmień dane</string>
    <string name="AddAcivity_edit_marker_false">Nie zmieniaj danych</string>
    <string name="open_camera">Otwórz kamerę</string>
    <string name="list_marker">Lista znaczników</string>
    <string name="close_text">Zamknij aplikację</string>
    <string name="delete_text">Usuń</string>
    <string name="delete_text_marker">Usuń ten znacznik</string>
    <string name="edit_text">Edytuj</string>
    <string name="select_text">Wybierz</string>
    <string name="delete_marker">Usunięto znacznik</string>
    <string name="delete_marker_error">Operacja usuwania znacznika przerwana</string>
    <string name="delete_alert_title">Uwaga!</string>
    <string name="delete_alert">Czy napewno chcesz usunąć znacznik?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="marker_info">Szczegóły</string>
    <string name="update_coordinates">Zaktualizuj współrzędne</string>
    <string name="gps_disabled_message">Twój GPS jest wyłączony. Czy chcesz go włączyć?</string>
    <string name="update_coordinates_question">Czy chcesz zaktualizować współrzędne</string>
    <string name="marker_title">Nazwa znacznika</string>
    <string name="marker_coordinates">Współprzędne geograficzne</string>
    <string name="marker_date">Data utworzenia</string>
    <string name="marker_user">Dodane przez</string>
    <string name="marker_description">Opis znacznika</string>
    <string name="marker_choose">Prowadź</string>
    <string name="validation_error">Błąd</string>
    <string name="validation_title">Nie podałeś nazwy znacznika</string>
    <string name="validation_coordinates">Poczekaj na prawidłową pozycję GPS</string>
    <string name="validation_description">Nie podałeś opisu znacznika</string>
    <string name="correct_text">Ok poprawię</string>
    <string name="internet_enable">Czy chcesz włączyć internet?</string>
    <string name="no_internet">Brak połączenia z internetem</string>
    <string name="no_internet_information_add_marker">Aby umożliwić dodanie znacznika aplikacja potrzebuje dostępu do internetu</string>
    <string name="no_internet_information_list_markers">Aby wyświetlić listę znaczników aplikacja potrzebuje dostępu do internetu</string>
    <string name="no_internet_information_delete_markers">Aby usunąć znacznika aplikacja potrzebuje dostępu do internetu</string>
    <string name="no_internet_information_choose_markers">Aby doprowadzić do znacznika aplikacja potrzebuje dostępu do internetu</string>
    <string name="no_internet_information_info_markers">Aby wyświetlić listę szczegóły znacznika aplikacja potrzebuje dostępu do internetu</string>
    <string name="no_internet_information_edit_markers">Aby zedytować znacznik aplikacja potrzebuje dostępu do internetu</string>
    <string name="ok">Ok</string>
    <string name="address_ftp_file">Podaj adres pliku main.php</string>
    <string name="language_select">Wybierz język</string>
    <string name="test_connection">Przetestuj połączenie</string>
    <string name="test_connection_ftp">Przetestuj połączenie z plikiem</string>
    <string name="save_changes">Zapisz zmiany</string>
    <string name="nosave_changes">Nie zapisuj zmian</string>
    <string name="components_check">Sprawdź wymagania aplikacji</string>
    <string name="finish_title">Dotarłeś do celu</string>
    <string name="back_home">Powrót do menu</string>
    <string name="finist_text">Właśnie dotarłeś do wybranego celu. Poniżej znajdują się przyciski dzięki którym łatwo możesz zakończyć proces doprowadzenia do celu. Miłej podróży</string>
    <string name="validation_title_equals">Podaj unikalną (niepowtarzającą się) nazwę</string>
</resources>
