<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.piotr.findmycar.Settings">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/action_settings"
            android:id="@+id/textView"
            android:layout_marginTop="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="71dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/address_ftp_file"/>
                />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:id="@+id/adress_ftp_file" />
                />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_height="wrap_content"
                    android:text="@string/test_connection_ftp"
                    android:id="@+id/test_connection"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/language_select"/>
                />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/select_language"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_height="wrap_content"
                    android:text="@string/components_check"
                    android:id="@+id/compontents_check"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_height="wrap_content"
                    android:text="@string/save_changes"
                    android:id="@+id/save_changes_settings"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_height="wrap_content"
                    android:text="@string/nosave_changes"
                    android:id="@+id/no_save_changes_settings"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>

    </RelativeLayout>
</ScrollView>