<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.piotr.findmycar.EditActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Activity_edit_title"
        android:id="@+id/textView"
        android:layout_marginTop="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="71dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/AddAcivity_edit_marker_title"/>
            />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/marker_title_edit"
                android:editable="false"/>
            />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/AddAcivity_edit_marker_coordinates_title"/>
            />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/marker_coordinates_long"
                android:editable="false"
                android:focusable="false"
                android:textSize="46px"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:id="@+id/marker_coordinates_lat"
                android:editable="false"
                android:focusable="false"
                android:textSize="46px"/>
            />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                style="?android:attr/button"
                android:layout_height="wrap_content"
                android:text="@string/update_coordinates"
                android:id="@+id/update_coordinates"
                android:layout_width="wrap_content" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/AddAcivity_edit_marker_text"/>
            />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="150dp"
                android:id="@+id/marker_title_text_edit" />
            />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_height="wrap_content"
                android:text="@string/AddAcivity_edit_marker"
                android:id="@+id/change_marker"
                android:layout_width="0dp"
                android:layout_weight="1"/>
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_height="wrap_content"
                android:text="@string/AddAcivity_edit_marker_false"
                android:id="@+id/add_marker_false_edit"
                android:layout_width="0dp"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>
</ScrollView>