<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.piotr.findmycar.MarkerInfo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/finish_title"
            android:id="@+id/textView"
            android:layout_marginTop="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginBottom="30dp">
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageOk"
                    android:src="@drawable/finish_icon"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/finist_text"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">
                <Button
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_text_marker"
                    android:id="@+id/btn_delete_marker_finish" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">
                <Button
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/back_home"
                    android:id="@+id/btn_back_finish" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">
                <Button
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/close_text"
                    android:id="@+id/btn_close_finish" />
            </TableRow>

        </TableLayout>



    </RelativeLayout>
</ScrollView>